changed into server fetching todos

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,9 @@ code {
   margin: 0 auto;
   padding: 0 30px;
 }
+
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 0;
+  }
+}
