--- a/src/index.css
+++ b/src/index.css
@@ -66,8 +66,8 @@ code {
 }
 
 .global_alert {
-  position: absolute;
-  bottom: 48px;
+  position: fixed;
+  bottom: 64px;
   left: 10%;
   right: 10%;
   z-index: 9;
